documented api
