# backend/server/app/Http/Controllers/Admin/WebInfoController.php
@@ -6,13 +6,7 @@ use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 use App\Models\WebInfo;
 
-/**
- * @OA\Get(
- *     path="/webinfo",
- * tags={"webinfo"},
- *     @OA\Response(response="200", description="Obtain web info")
- * )
- */
+
 
 class WebInfoController extends Controller
 {
