# backend/server/app/Http/Controllers/api/HomeController.php
@@ -5,12 +5,7 @@ namespace App\Http\Controllers\api;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 
-/**
- * @OA\Get(
- *     path="/projects",
- *     @OA\Response(response="200", description="Display a listing of projects.")
- * )
- */
+
 
 class HomeController extends Controller
 {
